kubernetes/elk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elk
  name: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elk
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/localnetwork: "true"
        io.kompose.service: elk
    spec:
      containers:
        - image: sebp/elk
          name: dcelk
          ports:
            - containerPort: 5601
            - containerPort: 9200
            - containerPort: 5044
          resources:
            requests:
              memory: "4Gi"
      restartPolicy: Always
status: {}
