kubernetes/filebeats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: filebeats
  name: filebeats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: filebeats
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/localnetwork: "true"
        io.kompose.service: filebeats
    spec:
      containers:
        - image: eu.gcr.io/eighth-pen-303910/training_filebeats
          name: filebeats
          resources: {}
          volumeMounts:
            - mountPath: /logs
              name: appvol
      restartPolicy: Always
      volumes:
        - name: appvol
          persistentVolumeClaim:
            claimName: appvol
status: {}
