kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
    - name: "8080"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
