kubernetes/elk-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elk
  name: elk
spec:
  ports:
    - name: "5601"
      port: 5601
      targetPort: 5601
    - name: "9200"
      port: 9200
      targetPort: 9200
    - name: "5044"
      port: 5044
      targetPort: 5044
  selector:
    io.kompose.service: elk
status:
  loadBalancer: {}
